--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "llama-facts",
+  "name": "sevilla-expert",
   "version": "1.0.0",
-  "description": "Create a llama facts alexa skill.",
+  "description": "Create a sevilla facts alexa skill.",
   "main": "index.js",
   "scripts": {
     "proxy": "bst proxy lambda index.js",
@@ -15,6 +15,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bespoken/llama-facts.git"
+    "url": "git://github.com/vicfergar/sevilla-expert.git"
   }
 }
